--- a/uitest/Tab/TabCon/TabCon/Controls/WaitingDLog.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/WaitingDLog.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="TabCon.Controls.WaitingDLog"
+﻿<UserControl x:Class="TabCon.Controls.WaitingDLog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:controls="clr-namespace:TabCon.Controls"
 		mc:Ignorable="d"
-    	WindowStartupLocation="CenterScreen"  Topmost="True"
-       Title="ProgressDialog" Width="500" Height="140" >
+    	Width="500" Height="140" 
+		>
+	<!--WindowStartupLocation="CenterScreen"  Topmost="True"
+       Title="しばらくお待ちください"-->
 
 	<Grid>
 		<Grid.ColumnDefinitions>
@@ -20,9 +22,11 @@
 
 		<controls:WaitingCircle  Grid.Row="0" Grid.Column="0"    Margin="10,10,0,0" Width="100" />
 		<!--<local:AnimeGifView Grid.Row="0" Grid.Column="1" Margin="10,10,0,0" Width="100" />-->
-
+		<!--<TextBox  x:Name="Progress_msg_tb" 
+			Text="処理中です。しばらくお待ちください。" 
+			Grid.Row="0" Grid.Column="2"  Margin="10,10,0,0"/>-->
 		<Label x:Name="Progress_msg_tb" 
 			Content="処理中です。しばらくお待ちください。" 
 			Grid.Row="0" Grid.Column="2"  Margin="10,10,0,0"/>
 	</Grid>
-</Window>
+</UserControl>
