--- a/uitest/Tab/TabCon/TabCon/Controls/WaitingDLog.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/WaitingDLog.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TabCon.Controls.WaitingDLog"
+﻿<Window x:Class="TabCon.Controls.WaitingDLog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,10 @@
 		xmlns:controls="clr-namespace:TabCon.Controls"
 		mc:Ignorable="d"
     	Width="500" Height="140" 
+		WindowStartupLocation="CenterScreen"  Topmost="True"
+       Title="しばらくお待ちください"
 		>
-	<!--WindowStartupLocation="CenterScreen"  Topmost="True"
-       Title="しばらくお待ちください"-->
+	<!---->
 
 	<Grid>
 		<Grid.ColumnDefinitions>
@@ -29,4 +30,4 @@
 			Content="処理中です。しばらくお待ちください。" 
 			Grid.Row="0" Grid.Column="2"  Margin="10,10,0,0"/>
 	</Grid>
-</UserControl>
+</Window>
